# scoffy

./: .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
src/templates/code_quality/: mypy.ini.j2  pytest.ini.j2  ruff.toml.j2
src/templates/docker/: .dockerignore.j2  Dockerfile.j2  docker-compose.yml.j2
src/templates/git/: .gitignore.j2  .pre-commit-config.yaml.j2
src/templates/vscode/: settings.json.j2
tests/: conftest.py
tests/integration/test_templates/: conftest.py  dockerignore_j2.py
tests/integration/test_templates/test_code_quality_templates/: conftest.py  test_mypy_ini_j2.py  test_pytest_ini_j2.py  test_ruff_toml_j2.py
tests/integration/test_templates/test_docker_templates/: conftest.py  test_docker_compose_j2.py  test_dockerfile_j2.py  test_dockerignore_j2.py
tests/integration/test_templates/test_git_templates/: conftest.py  teat_gitignore_j2.py  test_pre_commit_config_j2.py
tests/integration/test_templates/test_vscode_templates/: conftest.py  test_extensions_json_j2.py  test_launch_json_j2.py  test_settings_json_j2.py
tests/unit/: test_main.py
